# IVA-assignments

1/: CMakeLists.txt  README.md
1/src/: helper.h  main.cpp
2/: README.md
2/src/: Untitled-1.cpp  helper.h  main.cpp
3/: .gitignore  README.md
3/src/: helper.h  main.cpp
4/: .gitignore  CMakeLists.txt  README.md
4/src/: helper.h  main.cpp
